<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rewarded_video"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thirdpresence.adsdk.sampleapp.RewardedVideoActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accountField"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:text="@string/default_account_name"
        android:hint="@string/hint_account_field"
        android:layout_alignBaseline="@+id/accountLabel"
        android:layout_toRightOf="@+id/accountLabel"
        android:layout_marginLeft="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/placementField"
        android:layout_alignParentStart="false"
        android:text="@string/default_rewarded_video_placement_id"
        android:hint="@string/hint_placement_id_field"
        android:inputType="text"
        android:layout_alignBaseline="@+id/placementLabel"
        android:layout_alignLeft="@id/accountField" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_account_name"
        android:id="@+id/accountLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentStart="true"
        android:labelFor="@id/accountField"
        android:lines="1"
        android:layout_toLeftOf="@+id/loadButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_placement_id"
        android:id="@+id/placementLabel"
        android:layout_below="@id/accountLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statusLabel"
        android:layout_below="@id/placementLabel"
        android:lines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_status"
        android:labelFor="@id/statusField"
        android:layout_marginTop="15dip" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/statusField"
        android:layout_alignParentStart="false"
        android:contentDescription="@string/hint_status_field"
        android:inputType="textUri"
        android:layout_alignBaseline="@+id/statusLabel"
        android:layout_alignLeft="@id/accountField"
        android:enabled="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rewardField"
        android:layout_alignParentStart="false"
        android:contentDescription="@string/hint_reward_field"
        android:inputType="textUri"
        android:layout_alignBaseline="@+id/rewardLabel"
        android:layout_alignLeft="@+id/accountField"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/rewardLabel"
        android:layout_below="@id/statusLabel"
        android:lines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_reward"
        android:labelFor="@id/rewardField"
        android:layout_marginTop="15dip"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_init"
        android:contentDescription="@string/desc_init_button"
        android:id="@+id/initButton"
        android:layout_below="@id/rewardLabel"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_marginTop="15dip" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_load"
        android:contentDescription="@string/desc_load_button"
        android:id="@+id/loadButton"
        android:layout_alignTop="@id/initButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_display"
        android:contentDescription="@string/desc_display_button"
        android:id="@+id/displayButton"
        android:layout_alignTop="@id/loadButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="false" />

</RelativeLayout>
